[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imohash"
version = "1.1.0"
description = "Fast hashing for large files"
authors = [
    {name = "Jim Kalafut", email = "jim@kalafut.net"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.11",
]
keywords = ["hash", "hashing", "imohash"]
dependencies = [
    "mmh3 >= 2.5.1",
    "varint >= 1.0.2",
]
readme = "README.rst"

[project.urls]
Homepage = "https://github.com/kalafut/py-imohash"

[project.scripts]
imosum = "imohash.imohash:imosum"

[tool.setuptools]
packages = ["imohash"]